force-app/main/default/objects/b2c_customer__c/b2c_customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>