force-app/main/default/objects/b2c_customer__c/fields/address1__c.field-meta.xml
<CustomField>
    <fullName>address1__c</fullName>
    <description>Address line 1</description>
    <inlineHelpText>Address line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>