force-app/main/default/objects/b2c_customer__c/fields/address2__c.field-meta.xml
<CustomField>
    <fullName>address2__c</fullName>
    <description>Address line 2</description>
    <inlineHelpText>Address line 2</inlineHelpText>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>