force-app/main/default/objects/b2c_customer__c/fields/advocacyScore__c.field-meta.xml
<CustomField>
    <fullName>advocacyScore__c</fullName>
    <description>Is an indicator of whether the Customer would recommend us to their friends - captured through surveys scored on a 1-7 like RT scale</description>
    <inlineHelpText>Is an indicator of whether the Customer would recommend us to their friends - captured through surveys scored on a 1-7 like RT scale</inlineHelpText>
    <label>Advocacy Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>