force-app/main/default/objects/b2c_customer__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <description>Customer Age</description>
    <inlineHelpText>Customer Age</inlineHelpText>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>