force-app/main/default/objects/b2c_customer__c/fields/b2Cpassword__c.field-meta.xml
<CustomField>
    <fullName>b2Cpassword__c</fullName>
    <description>Customer password</description>
    <inlineHelpText>Customer password</inlineHelpText>
    <label>B2C Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>