force-app/main/default/objects/b2c_customer__c/fields/categoriesOfInterest__c.field-meta.xml
<CustomField>
    <fullName>categoriesOfInterest__c</fullName>
    <description>Cumulative list based of Interests obtained Via surveys and Bar Code System</description>
    <inlineHelpText>Cumulative list based of Interests obtained Via surveys and Bar Code System</inlineHelpText>
    <label>Categories Of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>