force-app/main/default/objects/b2c_customer__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>Town/city element of customer address</description>
    <inlineHelpText>Town/city element of customer address</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>