force-app/main/default/objects/b2c_customer__c/fields/communicationStatus__c.field-meta.xml
<CustomField>
    <fullName>communicationStatus__c</fullName>
    <description>Represents the validity of email, mobile and address details</description>
    <inlineHelpText>Represents the validity of email, mobile and address details</inlineHelpText>
    <label>Communication Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>