force-app/main/default/objects/b2c_customer__c/fields/county__c.field-meta.xml
<CustomField>
    <fullName>county__c</fullName>
    <description>County/state/region element of customer address</description>
    <inlineHelpText>County/state/region element of customer address</inlineHelpText>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>