force-app/main/default/objects/b2c_customer__c/fields/cumulativeSpend__c.field-meta.xml
<CustomField>
    <fullName>cumulativeSpend__c</fullName>
    <description>Calculation of total spend based upon Barcode Tracker and Purchase Value</description>
    <inlineHelpText>Calculation of total spend based upon Barcode Tracker and Purchase Value</inlineHelpText>
    <label>Cumulative Spend</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>