force-app/main/default/objects/b2c_customer__c/fields/currentMotherCode__c.field-meta.xml
<CustomField>
    <fullName>currentMotherCode__c</fullName>
    <description>Current mother code</description>
    <inlineHelpText>Current mother code</inlineHelpText>
    <label>Current Mother Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>