force-app/main/default/objects/b2c_customer__c/fields/currentPrivilegeTier__c.field-meta.xml
<CustomField>
    <fullName>currentPrivilegeTier__c</fullName>
    <description>Current Privilege tier</description>
    <inlineHelpText>Current Privilege tier</inlineHelpText>
    <label>Current Privilege Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>