force-app/main/default/objects/b2c_customer__c/fields/customerID__c.field-meta.xml
<CustomField>
    <fullName>customerID__c</fullName>
    <description>Uniquely identifies the customer</description>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>