force-app/main/default/objects/b2c_customer__c/fields/customerIDHash__c.field-meta.xml
<CustomField>
    <fullName>customerIDHash__c</fullName>
    <description>Non-sequential unique customer identifier</description>
    <inlineHelpText>Non-sequential unique customer identifier</inlineHelpText>
    <label>Customer ID Hash</label>
    <length>40</length>
    <type>Text</type>
</CustomField>