force-app/main/default/objects/b2c_customer__c/fields/dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dateOfBirth__c</fullName>
    <description>Customer date of birth</description>
    <inlineHelpText>Customer date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>