force-app/main/default/objects/b2c_customer__c/fields/doubleOptInStatus__c.field-meta.xml
<CustomField>
    <fullName>doubleOptInStatus__c</fullName>
    <description>Customer double optin status</description>
    <inlineHelpText>Customer double optin status</inlineHelpText>
    <label>Double Opt In Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>