force-app/main/default/objects/b2c_customer__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>Customer email address</description>
    <inlineHelpText>Customer email address</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>