force-app/main/default/objects/b2c_customer__c/fields/email_Active__c.field-meta.xml
<CustomField>
    <fullName>email_Active__c</fullName>
    <description>For Reporting</description>
    <formula>isRetiredDuplicate__c = false 
&amp;&amp;  NOT(ISBLANK(email__c ))
&amp;&amp;   NOT(ISPICKVAL(optInEmail__c, &quot;false&quot;))</formula>
    <label>email Active</label>
    <type>Checkbox</type>
</CustomField>