force-app/main/default/objects/b2c_customer__c/fields/facebookFollower__c.field-meta.xml
<CustomField>
    <fullName>facebookFollower__c</fullName>
    <description>Flag to indicate the Customer is on Facebook based on the Facebook Alias</description>
    <inlineHelpText>Flag to indicate the Customer is on Facebook based on the Facebook Alias</inlineHelpText>
    <label>Facebook Follower</label>
    <length>20</length>
    <type>Text</type>
</CustomField>