force-app/main/default/objects/b2c_customer__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <description>Customer first name</description>
    <inlineHelpText>Customer first name</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>