force-app/main/default/objects/b2c_customer__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <description>Customer gender</description>
    <inlineHelpText>Customer gender</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>