force-app/main/default/objects/b2c_customer__c/fields/isRetiredDuplicate__c.field-meta.xml
<CustomField>
    <fullName>isRetiredDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that record is a duplicate and should be ignored</description>
    <inlineHelpText>Flag to indicate that record is a duplicate and should be ignored</inlineHelpText>
    <label>Retired/Duplicate</label>
    <type>Checkbox</type>
</CustomField>