force-app/main/default/objects/b2c_customer__c/fields/lastEmailRead__c.field-meta.xml
<CustomField>
    <fullName>lastEmailRead__c</fullName>
    <description>Email message read most recently - Responsys Campaign Name</description>
    <inlineHelpText>Email message read most recently - Responsys Campaign Name</inlineHelpText>
    <label>Last Email Read</label>
    <length>255</length>
    <type>Text</type>
</CustomField>