force-app/main/default/objects/b2c_customer__c/fields/lastLinkClicked__c.field-meta.xml
<CustomField>
    <fullName>lastLinkClicked__c</fullName>
    <description>Email link clicked most recently - Responsys Campaign Name</description>
    <inlineHelpText>Email link clicked most recently - Responsys Campaign Name</inlineHelpText>
    <label>Last Link Clicked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>