force-app/main/default/objects/b2c_customer__c/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <description>Customer last name</description>
    <inlineHelpText>Customer last name</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>