force-app/main/default/objects/b2c_customer__c/fields/lastPurchaseValue__c.field-meta.xml
<CustomField>
    <fullName>lastPurchaseValue__c</fullName>
    <description>Most recent purchase value</description>
    <inlineHelpText>Most recent purchase value</inlineHelpText>
    <label>Last Purchase Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>