force-app/main/default/objects/b2c_customer__c/fields/latestBrandShopped__c.field-meta.xml
<CustomField>
    <fullName>latestBrandShopped__c</fullName>
    <description>Most recent brand purchased</description>
    <inlineHelpText>Most recent brand purchased</inlineHelpText>
    <label>Latest Brand Shopped</label>
    <length>50</length>
    <type>Text</type>
</CustomField>