force-app/main/default/objects/b2c_customer__c/fields/latestClickThroughDate__c.field-meta.xml
<CustomField>
    <fullName>latestClickThroughDate__c</fullName>
    <description>Date last clicked on an email link</description>
    <inlineHelpText>Date last clicked on an email link</inlineHelpText>
    <label>Latest ClickThrough Date</label>
    <type>Date</type>
</CustomField>