force-app/main/default/objects/b2c_customer__c/fields/latestGiftCardPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>latestGiftCardPurchaseDate__c</fullName>
    <description>Most recent gift card purchase date</description>
    <inlineHelpText>Most recent gift card purchase date</inlineHelpText>
    <label>Latest Gift Card Purchase Date</label>
    <type>Date</type>
</CustomField>