force-app/main/default/objects/b2c_customer__c/fields/latestHandsFreeShoppingDate__c.field-meta.xml
<CustomField>
    <fullName>latestHandsFreeShoppingDate__c</fullName>
    <description>Most recent hands free shopping date</description>
    <inlineHelpText>Most recent hands free shopping date</inlineHelpText>
    <label>Latest Hands Free Shopping Date</label>
    <type>Date</type>
</CustomField>