force-app/main/default/objects/b2c_customer__c/fields/latestMobileDevice__c.field-meta.xml
<CustomField>
    <fullName>latestMobileDevice__c</fullName>
    <description>Comes from Wi-Fi touch point and is an indicator as to what type of device the customer uses</description>
    <inlineHelpText>Comes from Wi-Fi touch point and is an indicator as to what type of device the customer uses</inlineHelpText>
    <label>Latest Mobile Device</label>
    <length>50</length>
    <type>Text</type>
</CustomField>