force-app/main/default/objects/b2c_customer__c/fields/latestPartnerPointsCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>latestPartnerPointsCollectionDate__c</fullName>
    <description>Most recent partner points collection date</description>
    <inlineHelpText>Most recent partner points collection date</inlineHelpText>
    <label>Latest Partner Points Collection Date</label>
    <type>Date</type>
</CustomField>