force-app/main/default/objects/b2c_customer__c/fields/latestPartnerPointsRedeemerDate__c.field-meta.xml
<CustomField>
    <fullName>latestPartnerPointsRedeemerDate__c</fullName>
    <description>Most recent partner points redeemer date</description>
    <inlineHelpText>Most recent partner points redeemer date</inlineHelpText>
    <label>Latest Partner Points Redeemer Date</label>
    <type>Date</type>
</CustomField>