force-app/main/default/objects/b2c_customer__c/fields/latestPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>latestPurchaseDate__c</fullName>
    <description>Most recent purchase date</description>
    <inlineHelpText>Most recent purchase date</inlineHelpText>
    <label>Latest Purchase Date</label>
    <type>Date</type>
</CustomField>