force-app/main/default/objects/b2c_customer__c/fields/latestReadDate__c.field-meta.xml
<CustomField>
    <fullName>latestReadDate__c</fullName>
    <description>Date last opened an email</description>
    <inlineHelpText>Date last opened an email</inlineHelpText>
    <label>Latest Read Date</label>
    <type>Date</type>
</CustomField>