force-app/main/default/objects/b2c_customer__c/fields/latestRedemptionDate__c.field-meta.xml
<CustomField>
    <fullName>latestRedemptionDate__c</fullName>
    <description>Most recent redemption date</description>
    <inlineHelpText>Most recent redemption date</inlineHelpText>
    <label>Latest Redemption Date</label>
    <type>Date</type>
</CustomField>