force-app/main/default/objects/b2c_customer__c/fields/latestShoppingExpressBookingDate__c.field-meta.xml
<CustomField>
    <fullName>latestShoppingExpressBookingDate__c</fullName>
    <description>Most recent Shopping Express booking date</description>
    <inlineHelpText>Most recent Shopping Express booking date</inlineHelpText>
    <label>Latest Shopping Express Booking Date</label>
    <type>Date</type>
</CustomField>