force-app/main/default/objects/b2c_customer__c/fields/latestVillageVisited__c.field-meta.xml
<CustomField>
    <fullName>latestVillageVisited__c</fullName>
    <description>Village visited most recently</description>
    <inlineHelpText>Village visited most recently</inlineHelpText>
    <label>Latest Village Visited</label>
    <length>50</length>
    <type>Text</type>
</CustomField>