force-app/main/default/objects/b2c_customer__c/fields/latestVIPRoomDate__c.field-meta.xml
<CustomField>
    <fullName>latestVIPRoomDate__c</fullName>
    <description>Most recent VIP room date</description>
    <inlineHelpText>Most recent VIP room date</inlineHelpText>
    <label>Latest VIP Room Date</label>
    <type>Date</type>
</CustomField>