force-app/main/default/objects/b2c_customer__c/fields/latestVisitDate__c.field-meta.xml
<CustomField>
    <fullName>latestVisitDate__c</fullName>
    <description>Date of latest visit</description>
    <inlineHelpText>Date of latest visit</inlineHelpText>
    <label>Latest Visit Date</label>
    <type>Date</type>
</CustomField>