force-app/main/default/objects/b2c_customer__c/fields/latestWifiUsageDate__c.field-meta.xml
<CustomField>
    <fullName>latestWifiUsageDate__c</fullName>
    <description>Most recent wifi session date</description>
    <inlineHelpText>Most recent wifi session date</inlineHelpText>
    <label>Latest Wifi Usage Date</label>
    <type>Date</type>
</CustomField>