force-app/main/default/objects/b2c_customer__c/fields/leadSource__c.field-meta.xml
<CustomField>
    <fullName>leadSource__c</fullName>
    <description>Original touchpoint of registration</description>
    <inlineHelpText>Original touchpoint of registration</inlineHelpText>
    <label>Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>