force-app/main/default/objects/b2c_customer__c/fields/leadSourceText__c.field-meta.xml
<CustomField>
    <fullName>leadSourceText__c</fullName>
    <description>More granular description of the lead source</description>
    <inlineHelpText>More granular description of the lead source</inlineHelpText>
    <label>Lead Source Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>