force-app/main/default/objects/b2c_customer__c/fields/methodOfTransport__c.field-meta.xml
<CustomField>
    <fullName>methodOfTransport__c</fullName>
    <description>From survey to indicate how Customer arrives at Village</description>
    <inlineHelpText>From survey to indicate how Customer arrives at Village</inlineHelpText>
    <label>Method of Transport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>