force-app/main/default/objects/b2c_customer__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <description>Customer mobile phone number</description>
    <inlineHelpText>Customer mobile phone number</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>