force-app/main/default/objects/b2c_customer__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <description>Customer nationality</description>
    <inlineHelpText>Customer nationality</inlineHelpText>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghan</fullName>
            </value>
            <value>
                <fullName>Agentinean</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Algerian</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Andorran</fullName>
            </value>
            <value>
                <fullName>Angolan</fullName>
            </value>
            <value>
                <fullName>Antiguans</fullName>
            </value>
            <value>
                <fullName>Argentine</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Azerbaijani</fullName>
            </value>
            <value>
                <fullName>Bahamian</fullName>
            </value>
            <value>
                <fullName>Bahraini</fullName>
            </value>
            <value>
                <fullName>Bajun</fullName>
            </value>
            <value>
                <fullName>Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Barbadian</fullName>
            </value>
            <value>
                <fullName>Barbudans</fullName>
            </value>
            <value>
                <fullName>Belarusian</fullName>
            </value>
            <value>
                <fullName>Belgian</fullName>
            </value>
            <value>
                <fullName>Belizean</fullName>
            </value>
            <value>
                <fullName>Beninese</fullName>
            </value>
            <value>
                <fullName>Bhutanese</fullName>
            </value>
            <value>
                <fullName>Bolivian</fullName>
            </value>
            <value>
                <fullName>Bosnian</fullName>
            </value>
            <value>
                <fullName>Brazilian</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Bruneian</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>