force-app/main/default/objects/b2c_customer__c/fields/optInEmail__c.field-meta.xml
<CustomField>
    <fullName>optInEmail__c</fullName>
    <description>Flag to indicate whether the customer is opted in for communication by email</description>
    <inlineHelpText>Flag to indicate whether the customer is opted in for communication by email</inlineHelpText>
    <label>opt In Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>