force-app/main/default/objects/b2c_customer__c/fields/optInMobile__c.field-meta.xml
<CustomField>
    <fullName>optInMobile__c</fullName>
    <description>Flag to indicate whether the customer is opted in for communication by mobile phone</description>
    <inlineHelpText>Flag to indicate whether the customer is opted in for communication by mobile phone</inlineHelpText>
    <label>opt In Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>