force-app/main/default/objects/b2c_customer__c/fields/optInPostal__c.field-meta.xml
<CustomField>
    <fullName>optInPostal__c</fullName>
    <description>Flag to indicate whether the customer is opted in for communication by post</description>
    <inlineHelpText>Flag to indicate whether the customer is opted in for communication by post</inlineHelpText>
    <label>opt In Postal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>