force-app/main/default/objects/b2c_customer__c/fields/optInPrivacyAgreement__c.field-meta.xml
<CustomField>
    <fullName>optInPrivacyAgreement__c</fullName>
    <description>Privacy agreement opt in status</description>
    <inlineHelpText>Privacy agreement opt in status</inlineHelpText>
    <label>opt In Privacy Agreement</label>
    <length>5</length>
    <type>Text</type>
</CustomField>