force-app/main/default/objects/b2c_customer__c/fields/optInProfiling__c.field-meta.xml
<CustomField>
    <fullName>optInProfiling__c</fullName>
    <description>Flag to indicate whether the customer is opted in for profiling</description>
    <inlineHelpText>Flag to indicate whether the customer is opted in for profiling</inlineHelpText>
    <label>opt In Profiling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>