force-app/main/default/objects/b2c_customer__c/fields/optInThirdParty__c.field-meta.xml
<CustomField>
    <fullName>optInThirdParty__c</fullName>
    <description>Flag to indicate whether the customer is opted in for communication from third parties</description>
    <inlineHelpText>Flag to indicate whether the customer is opted in for communication from third parties</inlineHelpText>
    <label>opt In Third Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>