force-app/main/default/objects/b2c_customer__c/fields/originalRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>originalRegistrationDate__c</fullName>
    <description>Date the customer originally registered</description>
    <inlineHelpText>Date the customer originally registered</inlineHelpText>
    <label>Original Registration Date</label>
    <type>Date</type>
</CustomField>