force-app/main/default/objects/b2c_customer__c/fields/over18__c.field-meta.xml
<CustomField>
    <fullName>over18__c</fullName>
    <description>Flag to indicate the customer is over 18</description>
    <inlineHelpText>Flag to indicate the customer is over 18</inlineHelpText>
    <label>Over 18</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>