force-app/main/default/objects/b2c_customer__c/fields/postcode__c.field-meta.xml
<CustomField>
    <fullName>postcode__c</fullName>
    <description>Customer postcode</description>
    <inlineHelpText>Customer postcode</inlineHelpText>
    <label>Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>